# projeto_fastzero

./: .coverage  pyproject.toml
projeto_fastzero/: app.py  models.py  schemas.py
tests/: conftest.py  test_app.py
